--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap');
 
+:root{
+    --primary-color: #047aed;
+}
 * {
  box-sizing: border-box;
  padding: 0;
@@ -35,8 +38,9 @@ img{
     width: 100%;
 }
 
+/* Navbar Styling*/
 .navbar{
-    background-color: #047aed;
+    background-color: var(--primary-color);
     color: #fff;
     height: 60px;
 }
@@ -59,6 +63,58 @@ img{
     justify-content: space-between;
 }
 
+/*Showcase*/
+.showcase{
+    height: 400px;
+    background-color: var(--primary-color);
+    color: #fff;
+    position: relative;
+
+}
+
+.showcase h1{
+    font-size: 40ox;
+
+}
+
+.showcase p{
+    margin: 20px 0;
+}
+
+.showcase .grid{
+    overflow: visible;
+    grid-template-columns: 55% 45%;
+    gap: 30px;
+}
+
+.showcase-form{
+    position: relative;
+    top: 60px;
+    height: 350px;
+    width: 400px;
+    padding: 40px;
+    z-index: 100;
+    justify-self: flex-end;
+}
+
+.showcase-form .form-control{
+    margin: 30px 0;
+}
+
+.showcase-form input[type='text'],
+.showcase-form input[type='email']{
+    border: 0;
+    border-bottom: 1px solid #b4becb;
+    width: 100%;
+    padding: 3px;
+    font-size: 16px;
+}
+
+.showcase-form input:focus{
+    outline: none;
+}
+
+/*Utilities*/
 .container{
     max-width: 1100px;
     margin: 0 auto;
@@ -66,8 +122,46 @@ img{
     padding: 0 40px;
 }
 
+.card{
+    background-color: #fff;
+    color: #333;
+    border-radius: 10px;
+    box-shadow: 0 3px 10px rgba(0,0,0, 0.2);
+    padding: 20px;
+    margin: 10px;
+}
+
+.btn{
+    display: inline-block;
+    padding: 10px 30px;
+    cursor: pointer;
+    background: var(--primary-color);
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+
+}
+
+.btn-outline{
+    background-color: transparent;
+    border: 1px #fff solid;
+}
+
+.btn:hover{
+    transform: scale(0.97);
+}
+
 .flex{
     display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+}
+
+.grid{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 30px;
     justify-content: center;
     align-items: center;
     height: 100%;
