--- a/css/utilities.css
+++ b/css/utilities.css
@@ -35,6 +35,48 @@
     transform: scale(0.97);
 }
 
+/*Backgrounds and coloured buttons*/
+.bg-primary, .btn-primary{
+    background-color: var(--primary-color);
+    color: #fff;
+}
+
+.bg-secondary, .btn-secondary{
+    background-color: var(--secondary-color);
+    color: #fff;
+}
+
+.bg-dark, .btn-dark{
+    background-color: var(--dark-color);
+    color: #fff;
+}
+
+.bg-lighter, .btn-lighter{
+    background-color: var(--lighter-color);
+    color: #333;
+}
+
+/*Text Sizes*/
+.lead{
+    font-size: 20px;
+}
+
+.sm{
+    font-size: 1rem;
+}
+
+.md{
+    font-size: 2rem;
+}
+
+.lg{
+    font-size: 3rem;
+}
+
+.xl{
+    font-size: 4rem;
+}
+
 .text-center{
     text-align: center;
 }
