--- a/css/utilities.css
+++ b/css/utilities.css
@@ -56,6 +56,15 @@
     color: #333;
 }
 
+.bg-primary a,
+.btn-primary a,
+.bg-secondary a, 
+.btn-secondary a,
+.bg-dark a, 
+.btn-dark a{
+    color: white;
+}
+
 /*Text Sizes*/
 .lead{
     font-size: 20px;
