--- a/css/style.css
+++ b/css/style.css
@@ -189,7 +189,8 @@ img{
 }
 
 /*Features Head Section*/
-.features-head img{
+.features-head img,
+.docs-head img{
     width: 200px;
     justify-self: flex-end;
 }
