--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,8 @@
     --secondary-color: #1c3fa8;
     --dark-color: #002240;
     --lighter-color: #f4f4f4;
+    --success-color: #5cb85c;
+    --error-color: #d9534f;
 }
 * {
  box-sizing: border-box;
@@ -39,6 +41,12 @@ p {
 
 img{
     width: 100%;
+}
+
+code, pre{
+    background-color: #333;
+    color: #fff;
+    padding: 10px;
 }
 
 /* Navbar Styling*/
@@ -216,6 +224,28 @@ img{
     grid-column: 1 / span 2;
 }
 
+/*Docs*/
+.docs-main h3{
+    margin: 20px 0;
+}
+
+.docs-main .grid{
+    grid-template-columns: 1fr 2fr;
+    align-items: flex-start;
+}
+
+.docs-main nav li{
+    font-size: 17px;
+    padding-bottom: 5px;
+    margin-bottom: 5px;
+    border-bottom: 1px;
+}
+
+.docs-main a:hover{
+    font-weight: bold;
+
+}
+
 
 /*Footer*/
 .footer .social a{
@@ -228,7 +258,9 @@ img{
     .showcase .grid,
     .stats .grid,
     .cli .grid,
-    .cloud .grid{
+    .cloud .grid,
+    .features-main .grid,
+    .docs-main .grid{
         grid-template-columns: 1fr;
         grid-template-rows: 1fr;
     }
@@ -250,6 +282,18 @@ img{
     .cli .grid > *:first-child{
         grid-column: 1;
         grid-row: 1;
+    }
+
+    .features-head,
+    .features-sub-head,
+    .docs-head{
+        text-align: center;
+    }
+
+    .features-head img,
+    .features-sub-head img,
+    .docs-head img{
+        justify-self: center;
     }
 }
 
