--- a/css/style.css
+++ b/css/style.css
@@ -295,6 +295,11 @@ code, pre{
     .docs-head img{
         justify-self: center;
     }
+
+    .features-main .grid > *:first-child,
+    .features-main .grid >  *:nth-child(2){
+        grid-column: 1;
+    }
 }
 
 /*Mobile*/
