--- a/css/style.css
+++ b/css/style.css
@@ -49,6 +49,11 @@ code, pre{
     padding: 10px;
 }
 
+.hidden{
+    visibility: hidden;
+    height: 0;
+}
+
 /* Navbar Styling*/
 .navbar{
     background-color: var(--primary-color);
